--- a/section2.css
+++ b/section2.css
@@ -49,6 +49,9 @@ flex-grow: 0;
 }  */ 
 
 body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 2350px;
 height: 1410px;
 left: 0px;
