--- a/section3.css
+++ b/section3.css
@@ -60,6 +60,11 @@ flex-direction: column;
 gap: 10px;
 
 }
+.wrapper{
+    width: 1728px;
+    height: auto;
+    background-color: white;
+}
 .left{
   
     display: flex;
