--- a/section2.css
+++ b/section2.css
@@ -48,7 +48,7 @@ flex-grow: 0;
 
 }  */ 
 
-body{
+/* body{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -98,7 +98,7 @@ padding-left: 200px;
 color: #000000;
 
 }
-
+ */
 
 
 
